# blackmirror-bench

./: .gitignore  CITATION.cff  LICENSE  METHODOLOGY.md  README.md  SAFETY.md  SPEC.md  pyproject.toml
dashboard/: app.js  index.html  snapshot.json  styles.css
gold/: FREEZE.json  rpi_v1.json
harness/: __init__.py  metrics.py  runner.py
paper/: main.md
results/: LEADERBOARD.md  LEGACY_PAD_ERA_README.txt  REPORT_grok-4.5.md  codex-gpt-5.6-sol-max_public_test_primary.json  codex-gpt-5.6-sol-max_public_test_primary_summary.json  codex-gpt-5.6-sol_public_test_primary.json  codex-gpt-5.6-sol_public_test_primary_summary.json  grok-4.5_public_test.json  grok-4.5_public_test_primary.json  grok-4.5_public_test_primary_summary.json  grok-4.5_public_test_summary.json  grok-4.5_smoke.json  grok-4.5_smoke_rescored.json  grok-4.5_smoke_rescored_summary.json  grok-4.5_smoke_summary.json  heuristic_public_dev.json  heuristic_public_test.json  heuristic_public_test_summary.json  heuristic_sota_smoke.json  heuristic_sota_smoke_summary.json  minimax-m3_public_test_primary.json  minimax-m3_public_test_primary_summary.json  mock_public_dev.json  mock_public_test.json  mock_smoke.json  random_mid_public_test.json  zai-glm-5.2_public_test_primary.json  zai-glm-5.2_public_test_primary_summary.json
schema/: evidence.schema.json  model_task.schema.json  rpi_score.schema.json  thesis.schema.json
scripts/: build_corpus.py  build_dashboard_snapshot.py  build_episode_map.py  build_sota_chart.py  chart_theme.py  check_push_identity.sh  export_hf.py  freeze_snapshot.py  rescore_raw.py  (+3 more)
(+522 files in other folders)
