[project]
name = "blackmirror-bench"
version = "1.0.0"
description = "Socio-technical feasibility + SOTA model calibration benchmark (Black Mirror corpus)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "waitdeadai" }]
dependencies = [
  "jsonschema>=4.22.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["harness*"]
